<resources>
    <string name="app_name">电影评分</string>
    <string name="search_tips"> 搜索电影 / 电视剧 </string>
    <string name="clear_search"> 清除搜索内容 </string>
    <string name="home_tag">主页</string>
    <string name="mine_tag">我的</string>
    <string name="director">导演</string>
    <string name="leader_actor">主演</string>
    <string name="login">请登录</string>
    <string name="setting">设置</string>
    <string name="activity_title"> </string>
    <string name="welcome">欢迎登录</string>
    <string name="register">注册账户</string>
    <string name="forgot_password">忘记密码</string>
    <string name="email">邮箱</string>
    <string name="password">密码</string>
    <string name="douban">豆瓣</string>
    <string name="maoyan">猫眼</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="empty"></string>
    <string name="hotnow">正在热映</string>
    <string name="fill">全部 ></string>
    <string name="sign_out">退出登录</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
